--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -23,3 +23,10 @@ html, body, #app {
 .el-pagination{
   margin-top: 15px;
 }
+
+.el-cascader__dropdown {
+  height: 200px;
+}
+.el-cascader-panel {
+  height: 200px;
+}
